# hansard-sovereign

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
results/: quantization_benchmark.csv
scripts/: analyze_quantization.py  api.py  benchmark_quantization.py  bootstrap.sh  check_bench.sh  dev.sh  embed.py  fetch_data.sh  ingest.py  pipeline.py  serve.sh  testDownloader.py  testExtractor.py  testRag.py  verify_extractor.py
tools/ui-design/: README.md
web/: Dockerfile  next.config.ts  package-lock.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/benchmark/info/: route.ts
web/app/api/benchmark/run/: route.ts
web/app/api/query/: route.ts
web/app/api/query/stream/: route.ts
web/app/api/suggestions/: route.ts
web/app/eval/: layout.tsx  page.tsx
web/lib/: backend.ts
web/public/: avatar-preview.html
