[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myhansard"
version = "0.1.0"
description = "A library to download Malaysian Parliament Hansard PDFs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "certifi==2026.4.22",
    "charset-normalizer==3.4.7",
    "chromadb>=1.5.9",
    "idna==3.15",
    "pdfplumber>=0.11.9",
    "pymongo>=4.17.0",
    "requests==2.34.2",
    "ruff==0.15.13",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.49",
    "urllib3==2.7.0",
]

[tool.setuptools.packages.find]
where = ["library"]

[tool.ruff]
select = ["E", "F", "I", "W", "B", "A"]
fix = true

[tool.ruff.format]
quote-style = "double"
